--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 .App {
   text-align: center;
+  min-height: 92vh;
 }
 
 .App-logo {
-  height: 40vmin;
+  /* height: 40vmin; */
+  height: 5vmin;
   pointer-events: none;
 }
 
@@ -14,13 +16,15 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  /* background-color: #282c34; */
+  /* min-height: 100vh; */
+  min-height: 30vh; /* added */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* font-size: calc(10px + 2vmin); */
+  font-size: calc(3px + 2vmin);
   color: white;
 }
 
@@ -35,4 +39,28 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+/* added */
+.nav-masthead .nav-link {
+  padding: 0.25rem 0;
+  font-weight: 700;
+  color: rgba(255, 255, 255, 0.7);
+  background-color: transparent;
+  border-bottom: 0.25rem solid transparent;
+}
+
+.nav-masthead .nav-link:hover,
+.nav-masthead .nav-link:focus {
+  color: rgba(255, 255, 255);
+  border-bottom-color: rgba(255, 255, 255, 0.9);
+}
+
+.nav-masthead .nav-link + .nav-link {
+  margin-left: 1rem;
+}
+
+.nav-masthead .active {
+  color: #fff;
+  border-bottom-color: #fff;
 }
